--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -10,6 +10,7 @@ html, body{
     min-width: 1000px;
     padding: 0;
     margin: 0;
+    background-image: url("https://imgur.com/kB1yHT9.png");
     background: #111;
     overflow-x: hidden;
     color: white;
