--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -11,7 +11,8 @@ html, body{
     padding: 0;
     margin: 0;
     background-image: url("https://imgur.com/kB1yHT9.png");
-
+    max-width: 99%;
+    max-height: 99%;
     overflow-x: hidden;
     color: white;
 }
