--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -10,9 +10,11 @@ html, body{
     min-width: 1000px;
     padding: 0;
     margin: 0;
-    background-image: url("https://imgur.com/kB1yHT9.png");
-    max-width: 99%;
-    max-height: 99%;
+    background-image: url("https://imgur.com/kB1yHT9.png") no-repeat fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     overflow-x: hidden;
     color: white;
 }
