--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -11,6 +11,7 @@ html, body{
     padding: 0;
     margin: 0;
     background-image: url("https://imgur.com/kB1yHT9.png");
+    background-size: 500px Auto;
     background-size: cover;
     overflow-x: hidden;
 }
