--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -12,7 +12,7 @@ html, body{
     margin: 0;
     background-image: url("https://imgur.com/kB1yHT9.png");
     background-size: 100px Auto;
-
+    background-repeat: no-repeat;
 }
 
 a{
