--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -10,11 +10,8 @@ html, body{
     min-width: 1000px;
     padding: 0;
     margin: 0;
-    background-image: url("https://imgur.com/kB1yHT9.png");
-    background-size: 450px Auto;
-    background-repeat: no-repeat;
-    display: block;
-    margin: 0 auto;
+    background: #ef4881;
+
 }
 
 a{
