--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -11,7 +11,8 @@ html, body{
     padding: 0;
     margin: 0;
     background: #1AA1DD;
-
+    overflow-x: hidden;
+    color: white;
 }
 
 a{
@@ -42,18 +43,18 @@ a{
 #startNewGameButton, #connectButton, #cashoutButton, #playAgainButton{
     width: 150px;
     height: 2em;
-    background: #90c739;
-    border: 1px solid #52b000;
+    background: #cc00cc;
+    border: 1px solid #ff33ff;
     color: #fff;
-    text-shadow: 0 -1px 0 #52b000;
+    text-shadow: 0 -1px 0 #ff33ff;
     text-transform: uppercase;
     font-weight: bold;
     margin: 20px 20px 20px 0;
     outline: none;
-    -moz-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    -webkit-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    -o-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -moz-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -webkit-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -o-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
     -webkit-tap-highlight-color: transparent;
 }
 
@@ -208,8 +209,8 @@ a{
 
 #chat #connectButton:active, #chat #connectButton:disabled {
     bottom: 3px;
-    box-shadow: 0 1px 1px #000, inset 0 2px 4px #060;
-    border: 1px solid #070;
+    box-shadow: 0 1px 1px #000, inset 0 2px 4px #cc00cc;
+    border: 1px solid #ff99ff;
     color: rgba(255, 255, 255, .5);
 }
 
@@ -417,7 +418,7 @@ a{
 
 #board {
     margin: 0;
-    background: #333;
+    background: #ff6600;
     padding: 16px;
     position: absolute;
     top: 0;
@@ -425,12 +426,12 @@ a{
     bottom: 0;
     right: 0;
     display: inline-block;
-    -moz-box-shadow: 0 1px 2px #000;
-    -webkit-box-shadow: 0 1px 2px #000;
-    box-shadow: 0 1px 2px #000;
-    border: 1px solid #444;
-    border-bottom-color: #111;
-    border-top-color: #555;
+    -moz-box-shadow: 0 1px 2px #b34700;
+    -webkit-box-shadow: 0 1px 2px #b34700;
+    box-shadow: 0 1px 2px #b34700;
+    border: 1px solid #ff944d;
+    border-bottom-color: #b34700;
+    border-top-color: #ffc299;
     list-style: none;
 }
 
@@ -443,8 +444,8 @@ a{
 
 #board #startNewGameButton:active, #board #startNewGameButton:disabled {
     top: 162px;
-    box-shadow: 0 1px 1px #000, inset 0 2px 4px #060;
-    border: 1px solid #070;
+    box-shadow: 0 1px 1px #000, inset 0 2px 4px #800080;
+    border: 1px solid #cc00cc;
     color: rgba(255, 255, 255, .5);
 }
 
@@ -543,13 +544,13 @@ a{
     width: 20%;
     height: 3em;
     margin: 0;
-    background: #444;
+    background: #ff6600;
     padding: 0;
     color: #fff;
-    border: 1px solid #666;
-    border-top-color: #777;
-    border-right-color: #111;
-    border-bottom: 2px solid #1a1a1a;
+    border: 1px solid #ffa366;
+    border-top-color: #ffa366;
+    border-right-color: #e65c00;
+    border-bottom: 2px solid #b34700;
     box-sizing: border-box;
     -moz-box-shadow: 0 .1em .1em #000;
     -webkit-box-shadow: 0 .1em .1em #000;
@@ -557,9 +558,9 @@ a{
     box-shadow: 0 .1em .1em #000;
 }
 #bombsButtons .button.active, #bombsButtons .button:active{
-    background: #333;
-    border: 1px solid #111;
-    border-top-color: #000;
+    background: #b34700;
+    border: 1px solid #ffa366;
+    border-top-color: #ffa366;
     box-shadow: inset 0 .2em .2em #111;
     font-weight: 600;
 }
@@ -621,12 +622,12 @@ a{
     width: 25%;
     padding: 0 5px;
     margin: 0;
-    background: #444;
+    background: ##ff6600;
     color: #fff;
-    border: 1px solid #666;
-    border-top-color: #777;
-    border-right-color: #111;
-    border-bottom: 2px solid #1a1a1a;
+    border: 1px solid #ffa366;
+    border-top-color: #ffa366;
+    border-right-color: #e65c00;
+    border-bottom: 2px solid #b34700;
     box-sizing: border-box;
     -moz-box-shadow: 0 .1em .1em #000;
     -webkit-box-shadow: 0 .1em .1em #000;
