--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -63,32 +63,32 @@ a{
     right: 5px;
     bottom: 8px;
     width: 70px;
-    background: #90c739;
-    border: 1px solid #52b000;
+    background: #cc00cc;
+    border: 1px solid #ff33ff;
     color: #fff;
-    text-shadow: 0 -1px 0 #52b000;
+    text-shadow: 0 -1px 0 #ff33ff;
     text-transform: uppercase;
     font-weight: bold;
     outline: none;
-    -moz-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    -webkit-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    -o-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -moz-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -webkit-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -o-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
     -webkit-tap-highlight-color: transparent;
 }
 
 #faucetButton, #depositButton, #withdrawButton{
-    background: #90c739;
-    border: 1px solid #52b000;
+    background: #cc00cc;
+    border: 1px solid #ff33ff;
     color: #fff;
-    text-shadow: 0 -1px 0 #52b000;
+    text-shadow: 0 -1px 0 #ff33ff;
     text-transform: uppercase;
     font-weight: bold;
     outline: none;
-    -moz-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    -webkit-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    -o-box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
-    box-shadow: 0 2px 0 #225a00,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -moz-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -webkit-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    -o-box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
+    box-shadow: 0 2px 0 #800080,0 3px 1px #000,inset 0 1px 0 rgba(255,255,255,.2);
     -webkit-tap-highlight-color: transparent;
 }
 
